# android-utils

./: .gitignore  .sops.yaml  AGENTS.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
.github/workflows/: publish-essentials-repository.yml
agent/app/: build.gradle.kts
agent/app/src/main/: AndroidManifest.xml
agent/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
apps/: README.md  manifest.json
apps/agent/: build.gradle.kts
apps/assistant/: build.gradle.kts
apps/assistant/src/main/: AndroidManifest.xml
apps/assistant/src/main/cpp/: CMakeLists.txt  assistant_intent_model.cpp  whisper_jni_common.cpp
apps/calendar/: README.md  build.gradle.kts
apps/calendar/src/main/: AndroidManifest.xml
apps/documents/: build.gradle.kts
apps/documents/src/main/: AndroidManifest.xml
apps/finance/: build.gradle.kts
apps/finance/src/main/: AndroidManifest.xml
apps/keyboard/: UPSTREAM.md  build.gradle
apps/keyboard/java/: AndroidManifest.xml
apps/keyboard/java/res-large/: README.md
apps/keyboard/libs/: README.md  vad-release.aar
apps/keyboard/translations/: README.md  l10n.toml
apps/keyboard/voiceinput-shared/: build.gradle
apps/maps/: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CONTRIBUTORS  FEATURES.md  NOTICE  README.md  SECURITY.md  build.gradle.kts  configure.sh
apps/maps-legacy/: FEATURES.md  README.md  build.gradle.kts
apps/maps/.forgejo/: CODEOWNERS
apps/maps/.forgejo/workflows/: android-beta.yaml  (+13 more)
apps/maps/.github/: FUNDING.yml
apps/maps/3party/: CMakeLists.txt
apps/maps/3party/monocypher/: CMakeLists.txt
apps/maps/android/: gradle.properties
apps/maps/data/: HOW_TO_EDIT_HIERARCHY.TXT.md  copyright.html  countries_meta.txt  countries_synonyms.csv  faq.html  hierarchy.txt  mapcss-mapping.csv  opening_hours_how_to_edit.html  replaced_tags.txt  subtypes.csv  taginfo.json
apps/maps/dev_sandbox/: main.mm  main_linux.cpp
apps/maps/docs/: CLION.md  CONTRIBUTING.md  CPP_STYLE.md  DEBUG_COMMANDS.md  DEPLOY_OWN_MAP_SERVER.md  ECLIPSE.md  FEATURE_STRUCTURE.md  FORMATTER.md  INSTALL.md  INSTALL_DESKTOP.md  PR_GUIDE.md  RELEASE_MANAGEMENT.md  ROADMAP.md  WORFLOWS.md
apps/maps/generator/: CMakeLists.txt  address_enricher.cpp  addresses_collector.cpp  addresses_collector.hpp  affiliation.cpp  altitude_generator.cpp  borders.cpp  borders.hpp  brands_loader.cpp  brands_loader.hpp  camera_info_collector.cpp  cells_merger.hpp  cities_boundaries_builder.cpp  cities_ids_builder.cpp  collector_boundary_postcode.hpp  collector_building_parts.cpp  collector_camera.cpp  collector_camera.hpp  collector_collection.cpp  collector_mini_roundabout.hpp  collector_routing_city_boundaries.cpp  collector_routing_city_boundaries.hpp  collector_tag.cpp  complex_loader.cpp  complex_loader.hpp  cross_mwm_osm_ways_collector.cpp  descriptions_section_builder.cpp  descriptions_section_builder.hpp  dumper.cpp  feature_builder.cpp  feature_builder.hpp  feature_generator.cpp  feature_maker_base.cpp  feature_processing_layers.cpp  feature_processing_layers.hpp  feature_sorter.cpp  filter_elements.hpp  filter_interface.hpp  filter_world.cpp  final_processor_coastline.cpp  (+53 more)
apps/maps/iphone/: plist.txt
apps/maps/packaging/: app.comaps.comaps.metainfo.xml
apps/maps/qt/: CMakeLists.txt  about.cpp  bookmark_dialog.hpp  editor_dialog.cpp  html_processor.cpp  html_processor.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  preferences_dialog.cpp  routing_turns_visualizer.hpp  search_panel.cpp  search_panel.hpp  update_dialog.cpp  update_dialog.hpp
apps/messages/: build.gradle  gradle.properties  settings.gradle
apps/messages/android-smsmms/: build.gradle
apps/messages/common/: build.gradle
apps/messages/data/: build.gradle
apps/messages/domain/: build.gradle
apps/messages/presentation/: build.gradle
apps/messaging/: build.gradle.kts
apps/nfc-reader/: README.md  build.gradle.kts
apps/notes/: build.gradle.kts
apps/pitch/: build.gradle.kts
apps/recorder/: build.gradle.kts
apps/scores/: THIRD_PARTY_NOTICES.md  build.gradle.kts
apps/scores/src/main/cpp/: CMakeLists.txt  verovio_bridge.cpp
apps/store/: .gitignore  README.md  UPSTREAM.md  keystore.properties.example  repository-packages.example.toml  repository-packages.toml
apps/store/app/: build.gradle.kts
apps/store/gradle/: verification-metadata.xml
apps/store/pages/: index.html
apps/trainer/: build.gradle.kts
apps/vault/: CHANGELOG  UPSTREAM.md  build.gradle
apps/vault/app/: build.gradle
apps/wallet/: PRIVACY.md  UPSTREAM.md  settings.gradle.kts
apps/wallet/app/: build.gradle.kts
apps/wallet/docs/: CONTENT_PROVIDER.md
apps/wallet/gradle/: libs.versions.toml
apps/weather/: THIRD_PARTY_NOTICES.md  build.gradle.kts
core/locations/: README.md  build.gradle.kts
docs/: launcher-icons.md  maps.md  rail-transit.md  vault-proton-pass-model.md
gradle/: essentials-dependency-versions.json
scripts/: build-assistant-android.sh  build-comaps-android.sh  build-cornwall-rail-assets.sh  build-cornwall-rail-schedule.py  build-documents-android.sh  build-essentials-apps-android.sh  build-essentials-apps.py  build-essentials-suite-android.sh  build-finance-android.sh  build-keyboard-android.sh  build-maps-android-with-rail.sh  build-messages-android.sh  build-notes-android.sh  build-pitch-android.sh  build-recorder-android.sh  build-scores-android.sh  build-scores-verovio-host.sh  build-store-android.sh  build-store-repository-local.sh  build-store-repository.py  build-store-repository.sh  build-trainer-android.sh  build-vault-android.sh  build-wallet-android.sh  build-weather-android.sh  deploy-store-repository.sh  essentials-dependency-policy.init.gradle  essentials-release-version.init.gradle  generate-store-repository-icons.py  init-store-repository-key.sh  materialize-comaps-third-party.sh  scores-local-import.sh  serve-store-repository-over-adb.sh  verify-suite-dependency-versions.py  verify-suite-dependency-versions.sh
signing/: README.md  apps.0.pub  apps.0.sec.sops.json  essentials-store.keystore.sops.json  store-password.sops.json
(+3315 files in other folders)
