cmake_minimum_required(VERSION 3.22.1)

project(scores_verovio_bridge)

add_library(scores_verovio_bridge SHARED verovio_bridge.cpp)

find_library(log-lib log)

set(VEROVIO_IMPORTED_SRC_DIR "$ENV{VEROVIO_SRC_DIR}")
if(VEROVIO_IMPORTED_SRC_DIR AND EXISTS "${VEROVIO_IMPORTED_SRC_DIR}/cmake/CMakeLists.txt")
    set(VEROVIO_SRC_DIR "${CMAKE_CURRENT_BINARY_DIR}/verovio-src")
    if(NOT EXISTS "${VEROVIO_SRC_DIR}/cmake/CMakeLists.txt")
        file(COPY "${VEROVIO_IMPORTED_SRC_DIR}/" DESTINATION "${VEROVIO_SRC_DIR}")
        execute_process(COMMAND chmod -R u+w "${VEROVIO_SRC_DIR}")
    endif()

    set(BUILD_AS_ANDROID_LIBRARY ON CACHE BOOL "" FORCE)
    set(NO_ABC_SUPPORT ON CACHE BOOL "" FORCE)
    set(NO_DARMS_SUPPORT ON CACHE BOOL "" FORCE)
    set(NO_GABC_SUPPORT ON CACHE BOOL "" FORCE)
    set(NO_HUMDRUM_SUPPORT OFF CACHE BOOL "" FORCE)
    set(NO_MXL_SUPPORT ON CACHE BOOL "" FORCE)
    set(NO_PAE_SUPPORT ON CACHE BOOL "" FORCE)
    set(NO_RUNTIME ON CACHE BOOL "" FORCE)
    add_subdirectory("${VEROVIO_SRC_DIR}/cmake" "${CMAKE_CURRENT_BINARY_DIR}/verovio")
    target_compile_definitions(scores_verovio_bridge PRIVATE HAVE_VEROVIO=1)
    target_include_directories(scores_verovio_bridge PRIVATE "${VEROVIO_SRC_DIR}/tools")
    target_link_libraries(scores_verovio_bridge verovio ${log-lib})
else()
    target_link_libraries(scores_verovio_bridge ${log-lib})
endif()
